Make sure <set to auto width> anchor is reachable on smaller screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,6 +18,7 @@
   align-items: flex-end;
   gap: 40px;
   padding-bottom: 40px;
+  margin-top: 100px;
   justify-content: center;
   background-image: url("~/assets/footer-background.jpg");
   background-repeat: no-repeat;
